--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Landing Page</h1>
-    <p>This is your first project, let’s make it awesome!</p>
+    <h1>Bun venit la landing page</h1>
+    <p>Primul proiect</p>
   </header>
   <main>
-    <button>Click me!</button>
+    <button>Buton</button>
   </main>
 </body>
 </html>
