--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <header>
-    <h1>Bun venit la landing page</h1>
+    <h1>Bun venit la landing page!!</h1>
     <p>Primul proiect</p>
   </header>
   <main>
-    <button>Buton</button>
+    <button>Button</button>
   </main>
 </body>
 </html>
