added website changes

--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Landing Page</title>
+  <title>NIKCOSH</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Bun venit la landing page!!</h1>
-    <p>Primul proiect</p>
+  <header class="navbar">
+    <div class="logo">NIKCOSH</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Products</a>
+      <a href="#">Contact</a>
+    </nav>
   </header>
-  <main>
-    <button>Button</button>
-  </main>
+
+  <section class="hero">
+    <h1>Experience Simplicity</h1>
+    <p>Inspired by design. Built by a beginner.</p>
+    <button>Explore Now</button>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 NIKCOSH All rights reserved.</p>
+  </footer>
 </body>
 </html>
