--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       <a href="#">Contact</a>
     </nav>
   </header>
+  
+<main>
+  <img src="images/animation.gif" alt="Cool animation" class="center-animation" />
+  <h2>Descoperă mai mult</h2>
+  <p>Produse unice, calitate superioară.</p>
+  <button>Vezi mai mult</button>
+</main>
 
   <section class="hero">
     <h1>Experience Simplicity</h1>
