--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
   
 <main>
-  <img src="images/animation.gif" alt="Cool animation" class="center-animation" />
+  <img src="images/nikcosh.gif" alt="Cool animation" class="center-animation" />
   <h2>Descoperă mai mult</h2>
   <p>Produse unice, calitate superioară.</p>
   <button>Vezi mai mult</button>
