--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
   
 <main>
-  <img src="images/nikcosh.gif" alt="Cool animation" class="center-animation" />
+  <img src="images/nikcosh-2.gif" alt="Cool animation" class="center-animation" />
 </main>
 
   <section class="hero">
