replaced logo with gif

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">NIKCOSH</div>
+    <div class="logo">
+  <img src="images/nikcosh-2.gif" alt="Logo animation" class="logo-img" />
+</div>
+
     <nav>
       <a href="#">Home</a>
       <a href="#">Products</a>
       <a href="#">Contact</a>
     </nav>
   </header>
-  
-<main>
-  <img src="images/nikcosh-2.gif" alt="Cool animation" class="center-animation" />
-</main>
+
 
   <section class="hero">
     <h1>Experience Simplicity</h1>
