--- a/index.html
+++ b/index.html
@@ -3,30 +3,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NIKCOSH</title>
+  <title>Business Landing Page</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="navbar">
-    <div class="logo">
-  <img src="images/nikcosh-2.gif" alt="Logo animation" class="logo-img" />
-</div>
-
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Products</a>
-      <a href="#">Contact</a>
-    </nav>
+  <header>
+    <div class="container nav">
+      <div class="logo">LOGO</div>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Course</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <a href="#" class="btn">Get Started</a>
+      </nav>
+    </div>
   </header>
 
   <section class="hero">
-    <h1>Experience Simplicity</h1>
-    <p>Inspired by design. Built by a beginner.</p>
-    <button>Explore Now</button>
+    <div class="container hero-content">
+      <div class="text">
+        <h1>Business<br />Landing Page</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam
+          nonummy nibh euismod tincidunt ut laoreet dolore.
+        </p>
+        <a href="#" class="btn">More Info</a>
+      </div>
+      <div class="image">
+        <img src="1f7ebbc2-1225-4ce4-8f3b-f65461f4b668.png" alt="Teamwork Illustration" />
+      </div>
+    </div>
   </section>
-
-  <footer>
-    <p>&copy; 2025 NIKCOSH All rights reserved.</p>
-  </footer>
 </body>
 </html>
