--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="#" class="btn">More Info</a>
       </div>
       <div class="image">
-        <img src="1f7ebbc2-1225-4ce4-8f3b-f65461f4b668.png" alt="Teamwork Illustration" />
+        <img src="business page.png" alt="Teamwork Illustration" />
       </div>
     </div>
   </section>
