--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="#" class="btn">More Info</a>
       </div>
       <div class="image">
-        <img src="business page.png" alt="Teamwork Illustration" />
+        <img src="images/business-page.png" alt="Teamwork Illustration" />
       </div>
     </div>
   </section>
