--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Business Landing Page</title>
+  <title>NIKCOSH Landing Page</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container nav">
-      <div class="logo">LOGO</div>
+      <div class="logo">
+  <img src="images/nikcosh-2.gif" alt="Logo animation" class="logo-img" />
+      </div>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
