--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container nav">
       <div class="logo">
-  <img src="images/nikcosh-2.gif" alt="Logo animation" class="logo-img" />
+  <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="Logo animation" class="logo-img" />
       </div>
       <nav>
         <ul>
