--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NIKCOSH Landing Page</title>
+  <title>NIKCOSH</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -28,10 +28,9 @@
 <section class="hero">
   <div class="container hero-content">
     <div class="text">
-      <h1>Business<br />Landing Page</h1>
+      <h1>NIKCOSH<br />Landing Page</h1>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam
-        nonummy nibh euismod tincidunt ut laoreet dolore.
+        Welcome to NIKCOSH, your go-to platform for learning and growth. Explore our courses, connect with experts, and take your skills to the next level.
       </p>
       <a href="#" class="btn">More Info</a>
     </div>
