added about us drag and drop functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
+          <li><a href="#about-us">About us</a></li>
           <li><a href="#">Course</a></li>
           <li><a href="#">Pricing</a></li>
           <li><a href="#">Contact</a></li>
@@ -37,6 +37,14 @@
     <div class="image">
       <img src="images/business-page.png" alt="Teamwork Illustration" />
     </div>
+  </div>
+</section>
+<section id="about-us" class="about-us-section">
+  <div class="container">
+    <h2>About Us</h2>
+    <p>
+      We are dedicated to helping you grow. NIKCOSH provides top-notch courses, expert advice, and a community for learning and development.
+    </p>
   </div>
 </section>
 </body>
