--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <p>
       We are dedicated to helping you grow. NIKCOSH provides top-notch courses, expert advice, and a community for learning and development.
     </p>
+    <a href="pricing.html" class="btn pricing-btn">View Pricing</a>
   </div>
 </section>
 </body>
