added about us section

--- a/pricing.html
+++ b/pricing.html
@@ -2,34 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pricing - NIKCOSH</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NIKCOSH Pricing</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="pricing.css" />
 </head>
 <body>
-  <header>
-    <div class="container nav">
-      <div class="logo">
-        <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="Logo animation" class="logo-img" />
-      </div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html#about-us">About us</a></li>
-          <li><a href="#">Course</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <a href="#" class="btn">Get Started</a>
-      </nav>
-    </div>
-  </header>
 
-  <section class="pricing-section">
-    <div class="container">
-      <h2>Our Pricing</h2>
-      <p>Here you can add all your pricing plans.</p>
+  <div class="logo-container">
+    <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="NIKCOSH Logo" />
+  </div>
+
+  <h1>Our Pricing Plans</h1>
+
+  <div class="pricing-container">
+
+    <div class="pricing-box">
+      <div class="plan-title">Basic Plan</div>
+      <div class="price">$299</div>
+      <div class="plan-description">
+        Ideal for small events: 2-hour videography & 20 edited photos.
+      </div>
+      <button class="btn">Choose Plan</button>
     </div>
-  </section>
+
+    <div class="pricing-box">
+      <div class="plan-title">Standard Plan</div>
+      <div class="price">$599</div>
+      <div class="plan-description">
+        Perfect for weddings & corporate: 5-hour videography & 60 photos.
+      </div>
+      <button class="btn">Choose Plan</button>
+    </div>
+
+    <div class="pricing-box">
+      <div class="plan-title">Premium Plan</div>
+      <div class="price">$999</div>
+      <div class="plan-description">
+        Full-day coverage with drone footage, videography, and 100+ photos.
+      </div>
+      <button class="btn">Choose Plan</button>
+    </div>
+
+  </div>
+
 </body>
 </html>
