--- a/pricing.html
+++ b/pricing.html
@@ -13,7 +13,7 @@
     <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="NIKCOSH Logo" />
   </div>
 
-  <h1>Our Pricing Plans</h1>
+  <h1 class="pricing-title">Our Pricing Plans</h1>
 
   <div class="pricing-container">
 
