--- a/pricing.html
+++ b/pricing.html
@@ -44,6 +44,10 @@
       <button class="btn">Choose Plan</button>
     </div>
 
+    <div>  class ="back-to-home"
+          <button class="btn">Back to Home</button>
+    </div>
+
   </div>
 
 </body>
