--- a/pricing.html
+++ b/pricing.html
@@ -43,10 +43,9 @@
       </div>
       <button class="btn">Choose Plan</button>
     </div>
-
-    <div>  class ="back-to-home"
-          <button class="btn">Back to Home</button>
-    </div>
+<div class="back-to-home">
+  <button class="btn">Back to Home</button>
+</div>
 
   </div>
 
