--- a/pricing.html
+++ b/pricing.html
@@ -43,9 +43,9 @@
       </div>
       <button class="btn">Choose Plan</button>
     </div>
-    
+
 <div class="back-to-home">
-  <button class="btn">Back to Home</button>
+  <a href="index.html" class="btn">Back to Home</a>
 </div>
 
   </div>
