--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#about-us">About us</a></li>
           <li><a href="#">Course</a></li>
-          <li><a href="#">Pricing</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
         <a href="#" class="btn">Get Started</a>
