--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>
         Welcome to NIKCOSH, your go-to platform for learning and growth. Explore our courses, connect with experts, and take your skills to the next level.
       </p>
-      <a href="#" class="btn">More Info</a>
+      <a href="pricing.html" class="btn">More Info</a>
     </div>
     <div class="image">
       <img src="images/business-page.png" alt="Teamwork Illustration" />
