--- a/pricing.html
+++ b/pricing.html
@@ -10,8 +10,9 @@
 <body>
 
   <div class="logo-container">
+    <a href="index.html"></a>
     <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="NIKCOSH Logo" />
-    
+  </a>
   </div>
 
   <h1 class="pricing-title">Our Pricing Plans</h1>
