--- a/pricing.html
+++ b/pricing.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="logo-container">
-    <a href="index.html"></a>
+    <a href="index.html">
     <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="NIKCOSH Logo" />
   </a>
   </div>
