changed main image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="pricing.html" class="btn">More Info</a>
     </div>
     <div class="image">
-      <img src="images/nikcosh-banner.png" alt="Teamwork Illustration" />
+      <img src="images/nikcosh-banner1.png" alt="Teamwork Illustration" />
     </div>
   </div>
 </section>
