--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <div class="text">
       <h1>NIKCOSH<br />Landing Page</h1>
       <p>
-        Welcome to NIKCOSH, your go-to platform for learning and growth. Explore our courses, connect with experts, and take your skills to the next level.
-      </p>
+          Captivating visuals. Cinematic storytelling. We turn your vision into reality.    </p>
       <a href="pricing.html" class="btn">More Info</a>
     </div>
     <div class="image">
@@ -43,7 +42,7 @@
   <div class="container">
     <h2>About Us</h2>
     <p>
-      We are dedicated to helping you grow. NIKCOSH provides top-notch courses, expert advice, and a community for learning and development.
+      We’re a passionate team of creatives dedicated to capturing unforgettable moments. While we specialize in filming concerts, we’re ready to take on any type of event — from corporate gigs to weddings and everything in between.
     </p>
     <a href="pricing.html" class="btn pricing-btn">View Pricing</a>
   </div>
