--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <section class="hero">
   <div class="container hero-content">
     <div class="text">
-      <h1>NIKCOSH<br />Landing Page</h1>
+      <h1>NIKCOSH<br /> </h1>
       <p>
           Captivating visuals. Cinematic storytelling. We turn your vision into reality.    </p>
       <a href="pricing.html" class="btn">More Info</a>
