--- a/pricing.html
+++ b/pricing.html
@@ -11,8 +11,8 @@
 
   <div class="logo-container">
     <a href="index.html">
-    <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="NIKCOSH Logo" />
-  </a>
+      <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="NIKCOSH Logo" />
+    </a>
   </div>
 
   <h1 class="pricing-title">Our Pricing Plans</h1>
@@ -20,35 +20,38 @@
   <div class="pricing-container">
 
     <div class="pricing-box">
-      <div class="plan-title">Basic Plan</div>
+      <div class="plan-title">Starter Package</div>
       <div class="price">$299</div>
       <div class="plan-description">
-        Ideal for small events: 2-hour videography & 20 edited photos.
+        Perfect for intimate and small-scale events.<br />
+        Includes up to <strong>2 hours of professional videography</strong> and <strong>25 high-quality edited photos</strong> to capture your best moments.
       </div>
       <button class="btn">Choose Plan</button>
     </div>
 
     <div class="pricing-box">
-      <div class="plan-title">Standard Plan</div>
+      <div class="plan-title">Professional Package</div>
       <div class="price">$599</div>
       <div class="plan-description">
-        Perfect for weddings & corporate: 5-hour videography & 60 photos.
+        Ideal for weddings, corporate events, and special occasions.<br />
+        Includes <strong>5 hours of cinematic videography</strong> and over <strong>80 professionally edited photos</strong> that highlight every detail.
       </div>
       <button class="btn">Choose Plan</button>
     </div>
 
     <div class="pricing-box">
-      <div class="plan-title">Premium Plan</div>
+      <div class="plan-title">Premium Package</div>
       <div class="price">$999</div>
       <div class="plan-description">
-        Full-day coverage with drone footage, videography, and 100+ photos.
+        Complete all-day coverage for unforgettable experiences.<br />
+        Includes <strong>full-day videography</strong>, <strong>drone footage</strong>, and over <strong>150 expertly edited photos</strong>—ensuring no moment is missed.
       </div>
       <button class="btn">Choose Plan</button>
     </div>
 
-<div class="back-to-home">
-  <a href="index.html" class="btn">Back to Home</a>
-</div>
+    <div class="back-to-home">
+      <a href="index.html" class="btn">Back to Home</a>
+    </div>
 
   </div>
 
