--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <a href="#" class="btn">Get Started</a>
+        <a href="pricing.html" class="btn">Get Started</a>
       </nav>
     </div>
   </header>
@@ -28,7 +28,7 @@
 <section class="hero">
   <div class="container hero-content">
     <div class="text">
-      <h1>NIKCOSH<br /> </h1>
+      <h1>Welcome to NIKCOSH</h1>
       <p>
           Captivating visuals. Cinematic storytelling. We turn your vision into reality.    </p>
       <a href="pricing.html" class="btn">More Info</a>
