--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       <div class="logo">
   <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="Logo animation" class="logo-img" />
       </div>
+      <div class="hamburger">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
