--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <a href="pricing.html" class="btn pricing-btn">View Pricing</a>
   </div>
 </section>
+<script src="menu-toggle.js"></script>
 </body>
 </html>
 
