added navigation bar to pricing.html

--- a/pricing.html
+++ b/pricing.html
@@ -8,13 +8,31 @@
   <link rel="stylesheet" href="pricing.css" />
 </head>
 <body>
-
-  <div class="logo-container">
-    <a href="index.html">
-      <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="NIKCOSH Logo" />
-    </a>
-  </div>
-
+<header>
+    <div class="container nav">
+      <div class="logo">
+        <a href="index.html">
+  <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="Logo animation" class="logo-img" />
+      </a>
+      </div>
+      <div class="hamburger">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#about-us">About us</a></li>
+          <li><a href="#">Course</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <a href="pricing.html" class="btn">Get Started</a>
+      </nav>
+    </div>
+  </header>
+  
   <h1 class="pricing-title">Our Pricing Plans</h1>
 
   <div class="pricing-container">
