added course files and updated index and pricing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#about-us">About us</a></li>
-          <li><a href="#">Course</a></li>
+          <li><a href="course.html">Course</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
