--- a/pricing.html
+++ b/pricing.html
@@ -24,7 +24,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="#about-us">About us</a></li>
-          <li><a href="#">Course</a></li>
+          <li><a href="course.html">Course</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
