changed lots of things

--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Learn with NIKCOSH</title>
+  <title>Get In Touch</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container nav">
       <div class="logo">
-       <a href="index.html">
+          <a href="index.html">
         <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="Logo animation" class="logo-img" />
       </div>
       <div class="hamburger">
@@ -31,29 +31,22 @@
     </div>
   </header>
 
-  <section class="pricing-header" style="text-align: center;">
-      <h1 class="highlighted-title" style="font-size: 2.5rem;">Learn with NIKCOSH</h1>
+  <section class="course-header" style="text-align: center;">
+      <h1 class="highlighted-title" style="font-size: 2.5rem;">Get In Touch</h1>
     <p class="subheading">
-      This page is for students who want to learn video and photo editing.<br>
-      If you want to hire me, please visit the <a href="pricing.html" style="text-decoration: underline;">Pricing</a> page.
+      Have a project in mind? We'd love to hear from you!<br>
     </p>
   </section>
 
   <section class="course-info container" style="max-width: 800px; margin: auto; text-align: center;">
-    <h2>What You Will Learn</h2>
+    <h2>Contact Information</h2>
+    
     <ul style="list-style: none; padding: 0; font-size: 1.1rem;">
-      <li>🎬 Professional video & photo editing (DaVinci Resolve, Lightroom, etc.)</li>
-      <li>🧠 Real-world mentorship and guidance</li>
-      <li>🗣️ How to talk with clients and close deals</li>
-      <li>📈 How to build your style and stand out</li>
+      <h3>Call Us</h3>
+      <li>+373 78 612 682</li>
+      <h3>Email Us</h3>
+      <li>nikcoshwork@gmail.com</li>
     </ul>
-    <p style="margin-top: 2rem; font-size: 1.1rem;">
-      If you're ready to start, send an email to:<br>
-      <strong>nikcoshinfo@gmail.com</strong>
-    </p>
-    <a href="mailto:nikcoshinfo@gmail.com" class="btn" style="margin-top: 1.5rem;">Contact Me</a>
-  </section>
-
-  <script src="menu-toggle.js"></script>
+</section>
 </body>
 </html>
