--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <header>
     <div class="container nav">
       <div class="logo">
+       <a href="index.html">
   <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="Logo animation" class="logo-img" />
       </div>
       <div class="hamburger">
@@ -23,7 +24,7 @@
           <li><a href="#about-us">About us</a></li>
           <li><a href="course.html">Course</a></li>
           <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <a href="pricing.html" class="btn">Get Started</a>
       </nav>
@@ -53,6 +54,21 @@
   </div>
 </section>
 <script src="menu-toggle.js"></script>
+<footer>
+  <div class="container footer-content">
+    <div class="footer-logo">
+      <img src="images/nikcosh-3-ezgif.com-crop-3.gif" alt="NIKCOSH Logo Black" />
+    </div>
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="course.html">Course</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <p class="footer-copy">© 2025 Nikcosh. All rights reserved.</p>
+  </div>
+</footer>
+
 </body>
 </html>
 
