--- a/pricing.html
+++ b/pricing.html
@@ -26,7 +26,7 @@
           <li><a href="#about-us">About us</a></li>
           <li><a href="course.html">Course</a></li>
           <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <a href="pricing.html" class="btn">Get Started</a>
       </nav>
