added footer to all pages

--- a/contact.html
+++ b/contact.html
@@ -48,5 +48,20 @@
       <li>nikcoshwork@gmail.com</li>
     </ul>
 </section>
+<footer>
+  <div class="container footer-content">
+    <div class="footer-logo">
+      <a href="index.html">
+      <img src="images/nikcosh-4-ezgif.com-crop.gif" alt="NIKCOSH Logo Black" />
+    </div>
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="course.html">Course</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <p class="footer-copy">© 2025 Nikcosh. All rights reserved.</p>
+  </div>
+</footer>
 </body>
 </html>
