--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#about-us">About us</a></li>
           <li><a href="course.html">Course</a></li>
           <li><a href="pricing.html">Pricing</a></li>
@@ -57,7 +57,8 @@
 <footer>
   <div class="container footer-content">
     <div class="footer-logo">
-      <img src="images/nikcosh-3-ezgif.com-crop-3.gif" alt="NIKCOSH Logo Black" />
+      <a href="index.html">
+      <img src="images/nikcosh-4-ezgif.com-crop.gif" alt="NIKCOSH Logo Black" />
     </div>
     <div class="footer-links">
       <a href="index.html">Home</a>
