--- a/course.html
+++ b/course.html
@@ -55,5 +55,22 @@
   </section>
 
   <script src="menu-toggle.js"></script>
+
+  <footer>
+  <div class="container footer-content">
+    <div class="footer-logo">
+      <a href="index.html">
+      <img src="images/nikcosh-4-ezgif.com-crop.gif" alt="NIKCOSH Logo Black" />
+    </div>
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="course.html">Course</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <p class="footer-copy">© 2025 Nikcosh. All rights reserved.</p>
+  </div>
+</footer>
+
 </body>
 </html>
