--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#about-us">About us</a></li>
+          <li><a href="about-us">About us</a></li>
           <li><a href="course.html">Course</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -59,6 +59,7 @@
     <div class="footer-logo">
       <a href="index.html">
       <img src="images/nikcosh-4-ezgif.com-crop.gif" alt="NIKCOSH Logo Black" />
+      </a>
     </div>
     <div class="footer-links">
       <a href="index.html">Home</a>
