--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
       <div class="logo">
           <a href="index.html">
         <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="Logo animation" class="logo-img" />
+        </a>
       </div>
       <div class="hamburger">
         <span></span>
@@ -62,6 +63,8 @@
     </div>
     <p class="footer-copy">© 2025 Nikcosh. All rights reserved.</p>
   </div>
+  <script src="menu-toggle.js"></script>
+
 </footer>
 </body>
 </html>
