--- a/pricing.html
+++ b/pricing.html
@@ -23,7 +23,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#about-us">About us</a></li>
+          <li><a href="index.html#about-us">About us</a></li>
           <li><a href="course.html">Course</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -87,6 +87,7 @@
     </div>
     <p class="footer-copy">© 2025 Nikcosh. All rights reserved.</p>
   </div>
+  <script src="menu-toggle.js"></script>
 </footer>
 
 </body>
