--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div class="logo">
        <a href="index.html">
   <img src="images/nikcosh-2-ezgif.com-crop-2.gif" alt="Logo animation" class="logo-img" />
+  </a>
       </div>
       <div class="hamburger">
   <span></span>
@@ -21,7 +22,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about-us">About us</a></li>
+          <li><a href="index.html#about-us">About us</a></li>
           <li><a href="course.html">Course</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
