--- a/pricing.html
+++ b/pricing.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="pricing.css" />
 </head>
 <body>
+    <div class="page-wrapper">
+
 <header>
     <div class="container nav">
       <div class="logo">
