--- a/course.html
+++ b/course.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+      <div class="page-wrapper">
+
   <header>
     <div class="container nav">
       <div class="logo">
