--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <div class="page-wrapper">
   <header>
     <div class="container nav">
       <div class="logo">
