--- a/pricing.html
+++ b/pricing.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="pricing.css" />
 </head>
 <body>
+   <div class="page-wrapper">
 <header>
     <div class="container nav">
       <div class="logo">
